Fixed modal padding on small screens

--- a/source/css/scss/base/_global-classes.scss
+++ b/source/css/scss/base/_global-classes.scss
@@ -491,8 +491,8 @@ hr {
     margin-left: -$spacer * 8;
   }
 
-  margin-right: -$spacer * 2;
-  margin-left: -$spacer * 2;
+  margin-right: -$spacer;
+  margin-left: -$spacer;
 }
 
 .a-full-height {
