--- a/source/css/scss/objects/_modal.scss
+++ b/source/css/scss/objects/_modal.scss
@@ -166,7 +166,7 @@
 }
 
 .a-modal-body {
-  padding: $spacer * 2;
+  padding: $spacer * 2 $spacer;
 
   @include media-breakpoint-up( md ) {
     padding: 36px 84px;
